# ai-buddy_v1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SESSION-NOTES.md  build-copilot-prompt.md.docx  canvas_lti_config.json  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
canvas_theme/: UPLOAD_INSTRUCTIONS.md  ai_buddy_badge.css  ai_buddy_badge.js  combined_canvas_inject.js
docs/: 02-nudge-prompt.md  03-reply-prompt.md  04-chat-prompt.md  notes.md
scripts/: peek_inbox.py  run_once.py  run_replier.py  test_canvas.py  test_canvas_client.py  test_claude.py  test_send.py
src/sgeg_nudge/: __init__.py  admin.py  alerts.py  canvas.py  chat.py  claude.py  config.py  dashboard.py  db.py  logging_setup.py  lti.py  main.py  nudge.py  replier.py  router.py  scheduler.py  student_context.py  sync.py  tickets.py  widget.py
src/sgeg_nudge/static/: app.js  index.html  style.css
tests/: test_alerts.py  test_candidate_finder.py  test_config_filter.py  test_dedup.py  test_security.py  test_tickets.py
