[project]
name = "ai-buddy"
version = "0.2.0"
description = "AI Buddy — Canvas LTI chatbot for K-12 students powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.103.1",
    "apscheduler>=3.11.2",
    "cryptography>=42.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "PyJWT[crypto]>=2.8.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.9",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
ai-buddy = "sgeg_nudge:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sgeg_nudge"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
